Fix HTML validation issues caused by p tags inside label tags and missing form action & removed br tags and used CSS for spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -419,10 +419,6 @@ form {
     padding: 15px;
 }
 
-form p {
-    margin-bottom: 5px;
-}
-
 input,
 textarea,
 select {
@@ -431,7 +427,7 @@ select {
     color: #fff;
     background-color: #3c3c3d;
     padding: 3px;
-    margin-bottom: 10px;
+    margin-bottom: 30px;
     resize: none;
 }
 
@@ -455,11 +451,10 @@ input[type=submit]:hover {
 }
 
 label {
+    display: block;
     font-family: "Roboto", sans-serif;
-}
-
-select {
-    margin-bottom: 15px;
+    color: #fff;
+    font-size: 150%;
 }
 
 /* media queries */
